<resources>
    <string name="app_name">Health Tracking System</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="phone_number">Phone Number</string>
    <string name="get_code">Get Code</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="myAppointments">My Appointments</string>
    <string name="signout">Sign out</string>
    <string name="aboutus">About Us</string>
    <string name="myOrders">My Orders</string>
    <string name="contact_us">Contact Us</string>
</resources>
