<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_myappointments"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/myAppointments" />
        <item
            android:id="@+id/nav_myorders"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/myOrders" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/signout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/aboutus" />
            <item
                android:id="@+id/nav_contactus"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_us" />
        </menu>
    </item>

</menu>
