<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pratik.healthtrackingsystem.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_myappointments"
        android:name="com.pratik.healthtrackingsystem.ui.gallery.GalleryFragment"
        android:label="@string/myAppointments"
        tools:layout="@layout/fragment_myappointments" />

    <fragment
        android:id="@+id/nav_myorders"
        android:name="com.pratik.healthtrackingsystem.ui.slideshow.SlideshowFragment"
        android:label="@string/myOrders"
        tools:layout="@layout/fragment_myorders" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.pratik.healthtrackingsystem.ui.tools.ToolsFragment"
        android:label="@string/aboutus"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/nav_signout"
        android:name="com.pratik.healthtrackingsystem.ui.send.SendFragment"
        android:label="@string/signout"
        tools:layout="@layout/fragment_signout" />
</navigation>